data/derived/fa15/progs/unify/prog3798.ml.out
Characters 56-57:
  | 1 -> 1
         ^
Error: This expression has type int but an expression was expected of type
         int list
